--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,35 +1,33 @@
-beautifulsoup4==4.12.3
-blinker==1.8.2
-certifi==2024.7.4
-charset-normalizer==3.3.2
+annotated-types==0.7.0
+anyio==4.6.2.post1
+certifi==2024.8.30
 click==8.1.7
-Flask==3.0.3
-Flask-Cors==4.0.1
-Flask-JWT-Extended==4.6.0
-Flask-SQLAlchemy==3.1.1
-frozendict==2.4.4
-greenlet==3.0.3
-html5lib==1.1
-idna==3.7
-itsdangerous==2.2.0
+dnspython==2.7.0
+email_validator==2.2.0
+fastapi==0.115.2
+fastapi-cli==0.0.5
+h11==0.14.0
+httpcore==1.0.6
+httptools==0.6.4
+httpx==0.27.2
+idna==3.10
 Jinja2==3.1.4
-lxml==5.2.2
-MarkupSafe==2.1.5
-multitasking==0.0.11
-numpy==2.0.1
-pandas==2.2.2
-peewee==3.17.6
-platformdirs==4.2.2
-PyJWT==2.9.0
-python-dateutil==2.9.0.post0
-pytz==2024.1
-requests==2.32.3
-six==1.16.0
-soupsieve==2.5
-SQLAlchemy==2.0.32
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
+python-dotenv==1.0.1
+python-multipart==0.0.12
+PyYAML==6.0.2
+rich==13.9.2
+shellingham==1.5.4
+sniffio==1.3.1
+starlette==0.40.0
+typer==0.12.5
 typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-webencodings==0.5.1
-Werkzeug==3.0.3
-yfinance==0.2.41
+uvicorn==0.32.0
+uvloop==0.21.0
+watchfiles==0.24.0
+websockets==13.1
