--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build", 
     "preview": "vite preview",
-    "build-only": "vite build",
+    "build-only": "vite build", 
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
@@ -26,15 +26,18 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20.17.9",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vue/eslint-config-prettier": "^10.0.0",
     "@vue/eslint-config-typescript": "^14.0.1",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.12.0",
-    "eslint-plugin-vue": "^9.29.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-vue": "^9.32.0",
     "npm-run-all2": "^6.2.3",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
